# Face-Recognition-Attendance

./: .gitignore  .gitmodules  CMakeLists.txt  default.nix  derivation.nix  face_recognition.cpp  face_recognition.hpp  main.cpp  overlay.nix
models/: CMakeLists.txt  models.cpp  models.hpp
